--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+node_modules
+.next
+.env
+.env.local
+.DS_Store
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
