--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.5",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
